# vlm-project

./: .gitignore  README.md  eval.py  main.py  modal-nb.ipynb  pyproject.toml
modal/: modal-nb.ipynb
src/: __init__.py  eval.py
tests/: test_eval.py
