[project]
name = "vlm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "accelerate>=1.12.0",
    "anls>=0.0.2",
    "antlr4-python3-runtime==4.11.1",
    "apted>=1.0.3",
    "bert-score>=0.3.13",
    "cairosvg>=2.8.2",
    "colormath>=3.0.0",
    "datasets>=4.5.0",
    "decord>=0.6.0",
    "distance>=0.1.3",
    "dotenv>=0.9.9",
    "editdistance>=0.8.1",
    "einops>=0.8.1",
    "google-genai>=1.59.0",
    "gradio>=6.3.0",
    "huggingface-hub>=0.36.0",
    "imageio>=2.37.2",
    "ipdb>=0.13.13",
    "jieba>=0.42.1",
    "json-repair>=0.55.0",
    "levenshtein>=0.27.1",
    "lpips>=0.1.4",
    "lxml>=6.0.2",
    "math-verify>=0.9.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "omegaconf>=2.4.0.dev4",
    "openai>=2.15.0",
    "openai-clip>=1.0.1",
    "opencv-python>=4.7.0.72",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "polygon3>=3.0.9.1",
    "portalocker>=3.2.0",
    "protobuf>=6.33.4",
    "pylatexenc==2.10",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "sty>=1.0.6",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.12.0",
    "timeout-decorator>=0.5.0",
    "timm>=1.0.24",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "typing-extensions>=4.15.0",
    "validators>=0.35.0",
    "xlsxwriter>=3.2.9",
    "zss>=1.2.0",
    "vlmeval",
]
[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.uv.sources]
vlmeval = { path = "libs/VLMEvalKit", editable = true }